# wayfire-ipc

./: .gitignore  LICENSE  README.md  TODO.md  meson.build  uncrustify.ini
.github/workflows/: ci.yml
metadata/: dpms.xml  i3-ipc.xml  ipc-server.xml  meson.build  power.xml
src/: meson.build
src/commands/: auto-kill.cpp  dpms.cpp  meson.build  power.cpp
src/include/: ipc.h  json.hpp  task.h  uuid.hpp  wlroots_support.h  xwayland_support.h
src/include/ipc/: command.h  json.hpp  server.hpp  tools.hpp
src/include/signals/: power-signals.hpp  wm-actions-signals.hpp
src/ipc/: ipc.cpp  meson.build  wayfire-ipc.7.scd
src/ipc/client/: i3-ipc-client.cpp  i3-ipc-client.hpp  ipc-client.cpp  ipc-client.hpp  meson.build  wf-msg.1.scd  wf-msg.cpp
src/ipc/command/: command_impl.cpp  command_impl.hpp  core.cpp  core.hpp  criteria.cpp  criteria.hpp  exit.cpp  fullscreen.cpp  kill.cpp  opacity.cpp  output.cpp  output.hpp  sticky.cpp
src/ipc/command/output/: dpms.cpp  list.cpp  mode.cpp  position.cpp  power.cpp  scale.cpp  transform.cpp
src/ipc/commands/: command_impl.cpp  command_impl.hpp  core.cpp  core.hpp  criteria.cpp  criteria.hpp  exit.cpp  fullscreen.cpp  kill.cpp  opacity.cpp  output.cpp  scratchpad.cpp  sticky.cpp  workspace.cpp
src/ipc/commands/output/: mode.cpp  position.cpp  power.cpp  scale.cpp  transform.cpp
src/ipc/json/: ipc-json.cpp
src/ipc/server/: i3-ipc-server.cpp  ipc-server.cpp
src/plugins/: meson.build  power.cpp
